; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows_x86/local/extr_40564.c_IsWow64.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows_x86/local/extr_40564.c_IsWow64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"kernel32\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"IsWow64Process\00", align 1
@.str.2 = private unnamed_addr constant [32 x i8] c"   [-] Failed (error code: %d)\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsWow64() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32 (i32, i32*)*, align 8
  %4 = load i32, i32* @FALSE, align 4
  store i32 %4, i32* %2, align 4
  %5 = call i32 @TEXT(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @GetModuleHandle(i32 %5)
  %7 = call i64 @GetProcAddress(i32 %6, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  %8 = inttoptr i64 %7 to i32 (i32, i32*)*
  store i32 (i32, i32*)* %8, i32 (i32, i32*)** %3, align 8
  %9 = load i32 (i32, i32*)*, i32 (i32, i32*)** %3, align 8
  %10 = icmp ne i32 (i32, i32*)* null, %9
  br i1 %10, label %11, label %20

11:                                               ; preds = %0
  %12 = load i32 (i32, i32*)*, i32 (i32, i32*)** %3, align 8
  %13 = call i32 (...) @GetCurrentProcess()
  %14 = call i32 %12(i32 %13, i32* %2)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %11
  %17 = call i32 (...) @GetLastError()
  %18 = call i32 @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.2, i64 0, i64 0), i32 %17)
  store i32 -1, i32* %1, align 4
  br label %22

19:                                               ; preds = %11
  br label %20

20:                                               ; preds = %19, %0
  %21 = load i32, i32* %2, align 4
  store i32 %21, i32* %1, align 4
  br label %22

22:                                               ; preds = %20, %16
  %23 = load i32, i32* %1, align 4
  ret i32 %23
}

declare dso_local i64 @GetProcAddress(i32, i8*) #1

declare dso_local i32 @GetModuleHandle(i32) #1

declare dso_local i32 @TEXT(i8*) #1

declare dso_local i32 @GetCurrentProcess(...) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
